# SpatiumAI

./: .env.example  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
Frontend/: package-lock.json  vercel.json
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/app/admin/: page.tsx
Frontend/app/contact-sales/: page.tsx
Frontend/app/docs/: page.tsx
Frontend/app/features/: page.tsx
Frontend/app/how-it-works/: page.tsx
Frontend/app/login/: page.tsx
Frontend/app/pricing/: page.tsx
Frontend/app/signup/: page.tsx
Frontend/components/: WaitlistForm.tsx  constraint-badge.tsx  constraint-domains-section.tsx  cta-section.tsx  hero-section.tsx  how-it-works-section.tsx  mono-tag.tsx  navigation.tsx  problem-section.tsx
apps/ai/: Dockerfile  pyproject.toml  requirements.txt
apps/ai/app/: config.py  main.py
apps/ai/app/lib/: logger.py
apps/ai/app/models/: resolution.py
apps/ai/app/resolvers/: resolution_generator.py
apps/ai/app/routers/: resolve.py
apps/ai/tests/: test_health.py
apps/api/: Dockerfile  drizzle.config.ts  package.json  vitest.config.ts
apps/api/src/: app.ts  server.ts
apps/parser/: Dockerfile  pyproject.toml  requirements.txt
apps/parser/app/: config.py  main.py
apps/parser/app/lib/: logger.py
apps/parser/app/models/: spatial_graph.py
apps/parser/app/parsers/: dxf_parser.py  ifc_parser.py
apps/parser/app/routers/: health.py  parse.py
apps/parser/tests/: test_health.py
apps/worker/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/worker/src/: worker.ts  (+1 more)
(+27 files in other folders)
