[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spatiumai-parser"
version = "0.1.0"
description = "SpatiumAI Parser Service — DXF/IFC to SpatialGraph"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
